# game

./: README.md  trilogy-mp.sln
cef/: cef.vcxitems
cef/lib/: libcef.lib
trilogy-client/: common.hpp  dllmain.cpp  trilogy-client.vcxproj  trilogy-client.vcxproj.filters
trilogy-client/core/: core.cpp  core.hpp
trilogy-client/hooking/: hooking.cpp  hooking.hpp
trilogy-client/hooking/hooks/: hook_crashfix.cpp  hook_crashfix.hpp  hook_disable_npc.cpp  hook_disable_npc.hpp  hook_game.cpp  hook_game.hpp
trilogy-client/memory/: memory.cpp  memory.hpp  module.hpp  patterns.hpp
trilogy-client/memory/features/: feature_model-resolver.cpp  feature_model-resolver.hpp
trilogy-client/networking/: networking.cpp  networking.hpp
trilogy-client/networking/entities/: client_entity.hpp  network_entity.hpp  player_entity.cpp  player_entity.hpp
trilogy-client/networking/features/: feature_benchmark.cpp  feature_benchmark.hpp  feature_discord-rpc.cpp  feature_discord-rpc.hpp  feature_nametags.cpp  feature_nametags.hpp  feature_nickgen.cpp  feature_nickgen.hpp
trilogy-client/networking/modules/: module_player-sync.cpp  module_player-sync.hpp  module_sync.hpp
trilogy-client/renderer/: renderer.cpp  renderer.hpp
trilogy-client/renderer/features/: feature_dev-chat.cpp  feature_dev-chat.hpp  feature_nametags.cpp  feature_nametags.hpp
trilogy-client/renderer/fonts/: sffont.hpp
trilogy-client/renderer/utilities/: imgui_render.cpp  imgui_render.hpp
trilogy-client/renderer/utilities/cef/: c_renderer_cef.cpp  c_renderer_cef.hpp  cef_app.cpp  cef_app.hpp  cef_texture.cpp  cef_texture.hpp  cef_view.cpp  cef_view.hpp  input_cef.cpp  input_cef.hpp  renderer_cef.cpp  renderer_cef.hpp
trilogy-client/scripting/: scripting.cpp  scripting.hpp
trilogy-client/sdk/: sdk.hpp  sdk_entity.hpp  sdk_ped.hpp  sdk_physical.hpp  sdk_placable.hpp  sdk_pool.hpp  sdk_running_script.cpp  sdk_running_script.hpp  sdk_script_commands.hpp  sdk_tasks.hpp  sdk_vector.hpp  sdk_weathers.hpp
trilogy-client/sdk/api/: sdk_ped_api.cpp  sdk_ped_api.hpp  sdk_streaming_api.cpp  sdk_streaming_api.hpp
trilogy-server/: CMakeLists.txt  common.hpp  server.cpp  trilogy-server.vcxproj  trilogy-server.vcxproj.filters  vehicle_entity.cpp
trilogy-server/core/: core.cpp  core.hpp
trilogy-server/networking/: server_networking.cpp  server_networking.hpp
trilogy-server/networking/entities/: network_entity.hpp  player_entity.cpp  player_entity.hpp  server_entity.cpp  server_entity.hpp
trilogy-server/networking/modules/: module_player-sync.cpp  module_player-sync.hpp  module_sync.hpp  module_vehicle-sync.hpp
trilogy-shared/: definitions.hpp  trilogy-shared.vcxitems  trilogy-shared.vcxitems.filters
trilogy-shared/networking/entities/: network_entity.hpp  player_entity.hpp  vehicle_entity.hpp
trilogy-shared/networking/packets/: packet_player_sync_data.hpp
trilogy-shared/utilities/: ida.hpp  logging.hpp  singleton.hpp
trilogy-test-netclient/: main.cpp  trilogy-test-netclient.vcxproj.filters
trilogy-test-netclient/trilogy-test-netclient/: trilogy-test-netclient.vcxproj
trilogy-ui-subprocess/: CMakeLists.txt  application.hpp  main.cpp  main.hpp  trilogy-ui-subprocess.vcxproj  trilogy-ui-subprocess.vcxproj.filters
